add getting number of rooms that meet requirements
